# scoras

./: LICENSE  README.md  UPDATE_INSTRUCTIONS.md  a2a-demo.js  a2a-interactive.md  a2a.md  a2a.py  a2a_example.py  advanced.md  advanced_example.py  agents.md  another_test.py  basic-concepts.md  basic.md  basic_example.py  complexity-scoring.md  contributing.md  core.md  demo-loader.js  demo.css  exemplo_avancado.py  exemplo_basico.py  extra.css  extra.js  fixes.css  index.md  installation.md  jupyter_example.py  license.md  main.html  mcp-demo.js  mcp-interactive.md  mcp.md  mcp_example.py  mkdocs.yml  pasted_content.txt  print.css  pyproject.toml  quick-start.md  rag.md  (+12 more)
.github/workflows/: python-test.yml
docs/: scoring_mathematical_foundation.md
scoras/: MANIFEST.in  __init__.py  a2a.py  agents.py  contextual_rag.py  core.py  mcp.py  minimal_test.py  rag.py  rag.py.bak  retriever.py  tools.py.bak
scoras.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scoras_update/: core_update.py  rag_update.py  scoras_new_features_docs.md  test_protocols_support.py  test_scoras_update.py  tools_update.py  update_scoras_package.py
tests/: __init__.py  test_a2a.py  test_agents.py  test_core.py  test_mcp.py  test_rag.py  test_tools.py
